<resources>
    <string name="app_name">ProgramingList</string>
    <string name="programing_name">Programing Name</string>
    <string name="detail">Programing detail</string>
    <string name="java">Java</string>
    <string name="java_definition">Definition of Java</string>
    <string name="dart_title">DART</string>
    <string name="dart_subtitle">Definition of Dart</string>
    <string name="dart_definition_detail">Dart is a client-optimized programming language for apps on multiple platforms.
        It is developed by Google and is used to build mobile, desktop, server, and web applications.
        Dart is an object-oriented, class-based, garbage-collected language with C-style syntax.
        Dart can compile to either native code or JavaScript. It supports interfaces, mixins, abstract classes, reified generics, and type inference.</string>
    <string name="dart_history_subtitle">History</string>
    <string name="dart_history_detail">Dart was unveiled at the GOTO conference in Aarhus, Denmark, October 10–12, 2011.
        The project was founded by Lars Bak and Kasper Lund. Dart 1.0 was released on November 14th, 2013.

    \n\nDart initially had a mixed reception and the Dart initiative has been criticized by some for fragmenting the web,
        due to the original plans to include a Dart VM in Chrome.
        Those plans were dropped in 2015 with the 1.9 release of Dart to focus instead on compiling Dart to JavaScript.
        In August 2018, Dart 2.0 was released, with language changes including a sound type system.

    \n\nRecently released Dart 2.6 is accompanied with a new extension dart2native.
        The feature extends native compilation to the Linux, macOS, and Windows desktop platforms.
        Earlier developers were able to create new tools only using Android or iOS devices.
        Moreover, with this extension it becomes possible to compose a Dart program into self-contained executables.
        Thus, according to the company representatives, it’s not obligatory now to have Dart SDK installed,
        the self-contained executables can now start running in a few seconds.
        The new extension is also integrated with Flutter toolkit, thus making it possible to use the compiler on small services (backend supporting for example).</string>
    <string name="cs_title">C#</string>
    <string name="cs_subtitle">Definition of C#</string>
    <string name="cs_subtitle_detail">C# (pronounced see sharp, like the musical note C♯, but written with the number sign) is a general-purpose,
        multi-paradigm programming language encompassing strong typing, lexically scoped, imperative, declarative, functional, generic,
        object-oriented (class-based), and component-oriented programming disciplines. It was developed around 2000 by Microsoft as part of its
        .NET initiative and later approved as an international standard by Ecma (ECMA-334) in 2002 and ISO (ISO/IEC 23270) in 2003.
        Mono is the name of the free and open-source project to develop a compiler and runtime for the language.
        C# is one of the programming languages designed for the Common Language Infrastructure (CLI).</string>
    <string name="cs_history">History</string>
    <string name="cs_history_detail">During the development of the .NET Framework, the class libraries were originally written using a managed code compiler system called
        \'Simple Managed C (SMC)\'. In January 1999, Anders Hejlsberg formed a team to build a new language at the time called Cool, which stood for
        \'C-like Object Oriented Language\'. Microsoft had considered keeping the name \'Cool\' as the final name of the language,
        but chose not to do so for trademark reasons. By the time the .NET project was publicly announced at the July 2000 Professional Developers Conference,
        the language had been renamed C#, and the class libraries and ASP.NET runtime had been ported to C#.

    \n\nHejlsberg is C# principal designer and lead architect at Microsoft, and was previously involved with the design of Turbo Pascal,
        Embarcadero Delphi (formerly CodeGear Delphi, Inprise Delphi and Borland Delphi), and Visual J++.
        In interviews and technical papers he has stated that flaws in most major programming languages (e.g. C++, Java, Delphi, and Smalltalk)
        drove the fundamentals of the Common Language Runtime (CLR), which, in turn, drove the design of the C# language itself.

    \n\nJames Gosling, who created the Java programming language in 1994, and Bill Joy, a co-founder of Sun Microsystems, the originator of Java,
        called C# an \'imitation\' of Java; Gosling further said that [C# is] sort of Java with reliability, productivity and security deleted.\'
        Klaus Kreft and Angelika Langer (authors of a C++ streams book) stated in a blog post that Java and C# are almost identical programming languages.
        Boring repetition that lacks innovation,\' \'Hardly anybody will claim that Java or C# are revolutionary programming languages
        that changed the way we write programs,\' and \'C# borrowed a lot from Java - and vice versa. Now that C# supports boxing and unboxing,
        we`ll have a very similar feature in Java.\' In July 2000, Hejlsberg said that C# is \'not a Java clone\' and is \'much closer to C++\' in its design.

    \n\nSince the release of C# 2.0 in November 2005, the C# and Java languages have evolved on increasingly divergent trajectories,
        becoming two quite different languages. One of the first major departures came with the addition of generics to both languages,
        with vastly different implementations. C# makes use of reification to provide \'first-class\' generic objects that can be used like any other class,
        with code generation performed at class-load time. Furthermore, C# has added several major features to accommodate functional-style programming,
        culminating in the LINQ extensions released with C# 3.0 and its supporting framework of lambda expressions, extension methods, and anonymous types.
        These features enable C# programmers to use functional programming techniques, such as closures, when it is advantageous to their application.
        The LINQ extensions and the functional imports help developers reduce the amount of boilerplate code that is included in common tasks like querying a database,
        parsing an xml file, or searching through a data structure, shifting the emphasis onto the actual program logic to help improve readability and maintainability.

        \n\nC# used to have a mascot called Andy (named after Anders Hejlsberg). It was retired on January 29, 2004.

        \n\nC# was originally submitted to the ISO subcommittee JTC 1/SC 22 for review,[ under ISO/IEC 23270:2003,
        was withdrawn and was then approved under ISO/IEC 23270:2006.</string>
    <string name="ruby_title">RUBY</string>
    <string name="ruby_subtitle">Definition of Ruby</string>
    <string name="ruby_subtitle_detail">Ruby is an interpreted, high-level, general-purpose programming language.
        It was designed and developed in the mid-1990s by Yukihiro \'Matz\' Matsumoto in Japan.

    \n\nRuby is dynamically typed and uses garbage collection. It supports multiple programming paradigms, including procedural, object-oriented, and functional programming.
        According to the creator, Ruby was influenced by Perl, Smalltalk, Eiffel, Ada, Basic, and Lisp.</string>
    <string name="ruby_history">History</string>
    <string name="ruby_history_detail">Early concept

    \n\nMatsumoto has said that Ruby was conceived in 1993. In a 1999 post to the ruby-talk mailing list, he describes some of his early ideas about the language:
    \n\'I was talking with my colleague about the possibility of an object-oriented scripting language. I knew Perl (Perl4, not Perl5), but I didn\'t like it really,
        because it had the smell of a toy language (it still has). The object-oriented language seemed very promising. I knew Python then. But I didn\'t like it,
        because I didn\'t think it was a true object-oriented language – OO features appeared to be add-on to the language. As a language maniac and OO fan for 15 years,
        I really wanted a genuine object-oriented, easy-to-use scripting language. I looked for but couldn\'t find one. So I decided to make it\'.

    \n\nMatsumoto describes the design of Ruby as being like a simple Lisp language at its core, with an object system like that of Smalltalk,
        blocks inspired by higher-order functions, and practical utility like that of Perl.

    \n\nThe name \'Ruby\'

    \n\nThe name "Ruby" originated during an online chat session between Matsumoto and Keiju Ishitsuka on February 24, 1993,
        before any code had been written for the language. Initially two names were proposed: \'Coral\' and \'Ruby\'.
        Matsumoto chose the latter in a later e-mail to Ishitsuka. Matsumoto later noted a factor in choosing the name \'Ruby\' – it was the birthstone of one of his colleagues.
    </string>
    <string name="php_title">PHP</string>
    <string name="php_subtitle">Definition of PHP</string>
    <string name="php_subtitle_detail">PHP is a popular general-purpose scripting language that is especially suited to web development.
        It was originally created by Danish-Canadian programmer Rasmus Lerdorf in 1994; the PHP reference implementation is now produced by The PHP Group.
        PHP originally stood for Personal Home Page, but it now stands for the recursive initialism PHP: Hypertext Preprocessor.

    \n\nPHP code is usually processed on a web server by a PHP interpreter implemented as a module, a daemon or as a Common Gateway Interface (CGI) executable.
        On a web server, the result of the interpreted and executed PHP code – which may be any type of data, such as generated HTML or
        binary image data – would form the whole or part of a HTTP response. Various web template systems, web content management systems,
        and web frameworks exist which can be employed to orchestrate or facilitate the generation of that response.
        Additionally, PHP can be used for many programming tasks outside of the web context, such as standalone graphical applications and robotic drone control.
        Arbitrary PHP code can also be interpreted and executed via command-line interface (CLI).

    \n\nThe standard PHP interpreter, powered by the Zend Engine, is free software released under the PHP License.
        PHP has been widely ported and can be deployed on most web servers on almost every operating system and platform, free of charge.

    \n\nThe PHP language evolved without a written formal specification or standard until 2014, with the original implementation acting as the de facto
        standard which other implementations aimed to follow. Since 2014, work has gone on to create a formal PHP specification.

    \n\nAs of April 2020, over half of sites on the web using PHP are still on discontinued/\'EOLed\' version 5.6 or older; and with version 7.0 and 7.1 over 68%,
        that are neither officially supported by The PHP Development Team, while security support is provided by third parties, such as Debian (up to June 2020 for PHP 5).
        Because of the popularity of PHP that means at least 53% of the websites in the world run on implementations of languages no longer supported by their designers.
        In addition, PHP version 7.2, the most popular supported PHP version, will stop getting security updates on November 30, 2020.</string>
    <string name="nama">Nama</string>
    <string name="nama_detail">Aldi Himawan</string>
    <string name="email">Email</string>
    <string name="email_detail">aldihimawan88@gmail.com</string>
</resources>