<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/php_detail"
    android:background="#314C5D">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/php_detail"/>

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:background="@drawable/rectangle_rounded_upside">

            <TextView
                android:id="@+id/php_title"
                style="@style/TextContent.Title"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/php_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/php_subtitle"
                style="@style/TextContent.Subtitle"
                android:layout_below="@id/php_title"
                android:text="@string/php_subtitle"/>

            <TextView
                android:id="@+id/php_subtitle_detail"
                style="@style/TextContent.Detail"
                android:layout_below="@id/php_subtitle"
                android:text="@string/php_subtitle_detail"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>